# IpValidatorUI

./: DefineTableCls.cpp  HighLighterColumns.cpp  TableCls.h  ValidatorCls.h  ValidatorDefine.cpp  main.cpp
build-IpValidator-Desktop-Debug/: IpValidator  Makefile  moc_TableCls.cpp  moc_mainwindow.cpp  moc_newWindow.cpp
scr/: CMakeLists.txt  CurrentAddress.h  DefineTableCLS.cpp  DefineTableCls.cpp  DefineWindow.cpp  DialogDefine.cpp  IpValidator.pro  MyLabel.h  ReadFromFile.h  TableCls.h  ValidatorDefine.cpp  iplist.txt  mainwindow.h  mainwindow.ui  newWindow.h
